src/test/deca/context/valid/created/selection-simple.deca
class A{
	int a = 3;
}
{
	A obj = new A();
	int b;
	b = obj.a;
}