src/test/deca/context/invalid/created/wrong-affectation-with-return.deca
class A{
	int fonction(int a){
		return a;
	}
}
{
	A a = new A();
	A b;
	b = a.fonction(3);
	
}